--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
